syntax = "proto3";

package vorpal.artifact;

option go_package = "github.com/ALT-F4-LLC/vorpal/sdk/go/pkg/api/artifact";

service ArtifactService {
    rpc GetArtifact(ArtifactRequest) returns (Artifact);
    rpc GetArtifactAlias(GetArtifactAliasRequest) returns (GetArtifactAliasResponse);
    rpc GetArtifacts(ArtifactsRequest) returns (ArtifactsResponse);
    rpc StoreArtifact(StoreArtifactRequest) returns (ArtifactResponse);
}

enum ArtifactSystem {
    UNKNOWN_SYSTEM = 0;
    AARCH64_DARWIN = 1;
    AARCH64_LINUX = 2;
    X8664_DARWIN = 3;
    X8664_LINUX = 4;
}

message ArtifactSource {
    optional string digest = 1;
    repeated string excludes = 2;
    repeated string includes = 3;
    string name = 4;
    string path = 5;
}

message ArtifactStepSecret {
    string name = 1;
    string value = 2;
}

message ArtifactStep {
    optional string entrypoint = 1;
    optional string script = 2;
    repeated ArtifactStepSecret secrets = 3;
    repeated string arguments = 4;
    repeated string artifacts = 5;
    repeated string environments = 6;
}

message Artifact {
    ArtifactSystem target = 1;
    repeated ArtifactSource sources = 2;
    repeated ArtifactStep steps = 3;
    repeated ArtifactSystem systems = 4;
    repeated string aliases = 5;
    string name = 6;
}

message ArtifactRequest {
    string digest = 1;
}

message ArtifactResponse {
    string digest = 1;
}

message ArtifactsRequest {
    repeated string digests = 1;
}

message ArtifactsResponse {
    repeated string digests = 1;
}

message GetArtifactAliasRequest {
  ArtifactSystem alias_system = 1;
  string alias = 2;
}

message GetArtifactAliasResponse {
    string digest = 1;
}

message StoreArtifactRequest {
  Artifact artifact = 1;
  repeated string artifact_aliases = 2;
}
